# AcceleratedGraphs

./: .gitignore  CMakeLists.txt  README.md  Synthesis framework for Execution of Neural Network as Data.docx  kernel.cl  main.cpp
Kernels/: add.cl  mult.cl  sub.cl
Task/Vadd/: compGraph.xml  schedule.xml  synthesis.xml
cxxopts/include/: cxxopts.hpp
fpga_build/: .cproject  .project  project.sdx
headers/: CompGraphParser.h  ComputationNode.hpp  ComputationRuntime.h  Compute_Platform.h  utils.h
kernel/: Add2to1.cl  Inc2.cl  Mul23.cl  Sub.cl  kernel.cl
pugixml-1.9/pugixml-1.9/scripts/vs2013/Win32_Debug/: pugixml.lib
pugixml-1.9/pugixml-1.9/scripts/vs2013/Win32_Debug/pugixml_vs2013.tlog/: Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog  pugixml_vs2013.lastbuildstate
sanity/: .cproject  .project  project.sdx
sanity/src/: host.cpp  vadd.cl
sources/: ComputationGraph.cpp  ComputationNode.cpp  ComputationRuntime.cpp  Compute_Platform.cpp  utils.cpp
vs_build/: vs_build.sln
vs_build/vs_build/: CompGraphParser.cpp  CompGraphParser.h  ComputationGraph.cpp  ComputationGraph.h  ComputationNode.cpp  ComputationNode.hpp  ComputationRuntime.cpp  Compute_Platform.cpp  utils.cpp  utils.h  vs_build.vcxproj  vs_build.vcxproj.filters
